--- a/Visit.css
+++ b/Visit.css
@@ -10,7 +10,7 @@ body{
  align-items: center;
  justify-content:center;
  text-align:center;
- background:url("media/wooden.jpg");
+ background:url("media/cement.jpg");
   max-width: 100%;
     height: auto;
  
